Fix workings-out container overflow scroll x hidden y

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,8 @@ input {
 #workings-out-scrolling-container {
     display: flex;
     flex-direction: row;
-    overflow-y: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
 }
 
 #workings-out-initial-panel, .workings-out-iteration-panel {
